--- a/wrap_ITKLang.cxx.in
+++ b/wrap_ITKLang.cxx.in
@@ -1,5 +1,5 @@
-#define ITK_WRAP_PACKAGE "ITK${module_name}${lang}"
+#define ITK_WRAP_PACKAGE "${module_name}${lang}"
 #define ITK_${lang_TOUPPER}_WRAP
 ${extra_headers}
-#include "wrap_ITK${module_name}.cxx"
+#include "wrap_${module_name}.cxx"
 
