Finish updating library CMakeLists for changes in WRITE_MODULE
darcs-hash:20060114025154-733a7-331ace51fc20fff786910290da144a95d6bc68bb.gz

--- a/BasicFiltersA/CMakeLists.txt
+++ b/BasicFiltersA/CMakeLists.txt
@@ -18,7 +18,7 @@ AUTO_INCLUDE_WRAP_CMAKE(WRAP_GROUPS "")
 
 #------------------------------------------------------------------------------
 # create the wrap_ITKBasicFilters*.cxx files
-WRITE_MODULE("BasicFiltersA" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
+WRITE_MODULE("ITKBasicFiltersA" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
 
 #------------------------------------------------------------------------------
 # create the ITKBasicFilters libraries
