--- a/CommonB/CMakeLists.txt
+++ b/CommonB/CMakeLists.txt
@@ -17,7 +17,7 @@ AUTO_INCLUDE_WRAP_CMAKE(WRAP_GROUPS "")
 
 #------------------------------------------------------------------------------
 # create the wrap_ITKBasicFilters*.cxx files
-WRITE_MODULE("CommonB" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
+WRITE_MODULE("ITKCommonB" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
 
 #------------------------------------------------------------------------------
 # create the ITKBasicFilters libraries
