--- a/SpatialObject/CMakeLists.txt
+++ b/SpatialObject/CMakeLists.txt
@@ -17,7 +17,7 @@ AUTO_INCLUDE_WRAP_CMAKE(WRAP_GROUPS "")
 
 #------------------------------------------------------------------------------
 # create the wrap_ITKBasicFilters*.cxx files
-WRITE_MODULE("SpatialObject" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
+WRITE_MODULE("ITKSpatialObject" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
 
 #------------------------------------------------------------------------------
 # create the ITKBasicFilters libraries
