PyBuffer External Project and associated changes
darcs-hash:20060114055711-733a7-eef626d223ed43d8b3b22ab44757a260fdb3fa02.gz

--- a/UseWrapITK.cmake.in
+++ b/UseWrapITK.cmake.in
@@ -54,4 +54,7 @@ INCLUDE("${WRAP_ITK_CMAKE_DIR}/itkConfigWrapping.cmake")
 
 # WRAP_ITK_SWIG_INCLUDE_DIRS initially populated by itkConfigWrapping 
 SET(WRAP_ITK_SWIG_INCLUDE_DIRS ${WRAP_ITK_SWIG_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR})
-  
+
+# Some macros require LIBRARY_OUTPUT_PATH to be set. For now, set it to its default.
+# Re-set later if a different library output path is needed.
+SET(LIBRARY_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}")
