Remove need for global variable WrapITK_PART_DIR -- now uses explicit macro parameters
darcs-hash:20060114092848-733a7-ed77e9a4f5821b3d3449e7ea3dcda60754a1a634.gz

--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -3,7 +3,7 @@ STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
 SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
 WRITE_LANG_BEGIN("itkcommon")
 
-SET(WrapITK_PART_DIR "${WrapITK_BINARY_DIR}/CommonA")
+SET(CXX_OUTPUT_DIR "${WrapITK_BINARY_DIR}/CommonA")
 
 #------------------------------------------------------------------------------
 # create a list of groups
@@ -49,7 +49,7 @@ SET(WRAP_GROUPS
 
 #------------------------------------------------------------------------------
 # create the wrap_ITKCommon*.cxx files
-WRITE_MODULE_LANG("ITKCommonA" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
+WRITE_MODULE_LANG("ITKCommonA" "${CXX_OUTPUT_DIR}" "${WRAP_GROUPS}")
 
 #------------------------------------------------------------------------------
 # create a list of files for templating
@@ -60,7 +60,7 @@ SET(WRAP_CXX_EXTRA
 )
 
 FOREACH(file ${WRAP_GROUPS} ${WRAP_CXX_EXTRA})
-   INCLUDE_WRAP_CMAKE(${file})
+   INCLUDE_WRAP_CMAKE(${file} "${CXX_OUTPUT_DIR}")
 ENDFOREACH(file ${WRAP_CXX_SOURCES})
 
 #------------------------------------------------------------------------------
