--- a/BasicFiltersC/CMakeLists.txt
+++ b/BasicFiltersC/CMakeLists.txt
@@ -3,7 +3,7 @@ STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
 SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
 WRITE_LANG_BEGIN("itkbasicfilters")
 
-SET(WrapITK_PART_DIR "${WrapITK_BINARY_DIR}/BasicFiltersC")
+SET(CXX_OUTPUT_DIR "${WrapITK_BINARY_DIR}/BasicFiltersC")
 
 
 #------------------------------------------------------------------------------
@@ -14,11 +14,11 @@ SET(WRAP_GROUPS
 )
 
 # include every wrap_*.cmake files in the directory
-AUTO_INCLUDE_WRAP_CMAKE(WRAP_GROUPS "")
+AUTO_INCLUDE_WRAP_CMAKE(WRAP_GROUPS "" "${CXX_OUTPUT_DIR}")
 
 #------------------------------------------------------------------------------
 # create the wrap_ITKBasicFilters*.cxx files
-WRITE_MODULE("ITKBasicFiltersC" "${WrapITK_PART_DIR}" "${WRAP_GROUPS}")
+WRITE_MODULE("ITKBasicFiltersC" "${CXX_OUTPUT_DIR}" "${WRAP_GROUPS}")
 
 #------------------------------------------------------------------------------
 # create the ITKBasicFilters libraries
