--- a/BasicFiltersA/CMakeLists.txt
+++ b/BasicFiltersA/CMakeLists.txt
@@ -1,7 +1,7 @@
 SET(ITK_LIBRARY "ITKBasicFiltersA")
 STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
-SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
-WRITE_LANG_BEGIN("itkbasicfilters")
+SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/@MODULE_LANG@/${ITK_LIBRARY_LANG}")
+WRITE_LANG_BEGIN("itkbasicfilters" "${ITK_LANG_FILE}")
 
 SET(CXX_OUTPUT_DIR "${WrapITK_BINARY_DIR}/BasicFiltersA")
 
