--- a/CommonB/CMakeLists.txt
+++ b/CommonB/CMakeLists.txt
@@ -1,6 +1,6 @@
-SET(ITK_LIBRARY "ITKCommonB")
+SET(ITK_LIBRARY "ITKCommonB"  "${ITK_LANG_FILE}")
 STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
-SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
+SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/@MODULE_LANG@/${ITK_LIBRARY_LANG}")
 WRITE_LANG_BEGIN("itkcommon")
 
 SET(CXX_OUTPUT_DIR "${WrapITK_BINARY_DIR}/CommonB")
