--- a/SpatialObject/CMakeLists.txt
+++ b/SpatialObject/CMakeLists.txt
@@ -1,7 +1,7 @@
 SET(ITK_LIBRARY "ITKSpatialObject")
 STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
-SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/Python/${ITK_LIBRARY_LANG}")
-WRITE_LANG_BEGIN(${ITK_LIBRARY_LANG})
+SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/@MODULE_LANG@/${ITK_LIBRARY_LANG}")
+WRITE_LANG_BEGIN(${ITK_LIBRARY_LANG} "${ITK_LANG_FILE}")
 
 SET(CXX_OUTPUT_DIR "${WrapITK_BINARY_DIR}/SpatialObject")
 
