STRING(CONFIGURE won't work properly for me...
darcs-hash:20060114103451-733a7-3e730fdaa97b78317d2f130d70a82ac77a9e632d.gz

--- a/Patented/CMakeLists.txt
+++ b/Patented/CMakeLists.txt
@@ -1,6 +1,6 @@
 SET(ITK_LIBRARY "ITKPatented")
 STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
-SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/@MODULE_LANG@/${ITK_LIBRARY_LANG}")
+SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/#MODULE_LANG#/${ITK_LIBRARY_LANG}")
 WRITE_LANG_BEGIN(${ITK_LIBRARY_LANG} "${ITK_LANG_FILE}")
 
 SET(CXX_OUTPUT_DIR "${WrapITK_BINARY_DIR}/Patented")
