make java build
I still don't have understood why, but some module must be renamed to make it work...

darcs-hash:20060114104154-2fc9d-f77e109cbc5b97029492966f38115daf363ad91d.gz

--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -24,7 +24,7 @@ SET(WRAP_GROUPS
     itkBinaryBallStructuringElement
     itkDenseFiniteDifferenceImageFilter
     itkDifferenceImageFilter
-    itkEventObject
+    itkEventObjects
     itkFiniteDifferenceFunction
     itkFiniteDifferenceImageFilter
     itkFixedArray
