install UseWrapITK.cmake file
darcs-hash:20060114140148-2fc9d-a725620d212300059bf3640c34e69d6c9408f20e.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -378,6 +378,7 @@ FOREACH(f
  WrapTypePrefix.cmake
  WrapTypeBase.cmake
  wrap_ITKLang.cxx.in
- WrapITKLang.cmake)
-  INSTALL_FILES(/lib/InsightToolkit ${f})
+ WrapITKLang.cmake
+ "${WrapITK_BINARY_DIR}/UseWrapITK.cmake")
+  INSTALL_FILES(/lib/InsightToolkit FILES "${f}")
 ENDFOREACH(f)
