fix search path for cmake module
darcs-hash:20060114141405-2fc9d-b5ab7403d84ffb498bd1375cf41221a34e8009ff.gz

--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -9,7 +9,7 @@ ENDIF(NOT WRAP_ITK_DIR)
 INCLUDE("${WRAP_ITK_DIR}/UseWrapITK.cmake")
 
 # Deal with numarray package  Options
-SET(CMAKE_MODULE_PATH ${ITK_SOURCE_DIR}/CMake)
+SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
 FIND_PACKAGE( NUMARRAY )
 
 INCLUDE_DIRECTORIES( ${PYTHON_NUMARRAY_INCLUDE_DIR} )
