--- a/ExternalProjects/ItkVtk/CMakeLists.txt
+++ b/ExternalProjects/ItkVtk/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------
-PROJECT(itkvtk)
+PROJECT(ItkVtk)
 
 #-----------------------------------------------------------------------------
 # DaVaW version number, usefull for packaging and doxygen doc:
