add (dirty) install commands
darcs-hash:20060115184249-2fc9d-b97c28aa976d0b89e57d3c34d571382ce7f967b3.gz

--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -59,3 +59,11 @@ ITK_WRAP_LIBRARY(
   "${PROJECT_BINARY_DIR}"
 )
 
+IF(ITK_CSWIG_PYTHON)
+  FOREACH(file ${WRAP_GROUPS})
+      INSTALL_FILES(/lib/InsightToolkit/python FILES "${PROJECT_BINARY_DIR}/${file}.py")
+  ENDFOREACH(file ${WRAP_GROUPS})
+  INSTALL_FILES(/lib/InsightToolkit/python/auto FILES "${PROJECT_BINARY_DIR}/${ITK_LIBRARY}Py.py")
+  INSTALL_FILES(/lib/InsightToolkit/python FILES "${PROJECT_BINARY_DIR}/${ITK_LIBRARY}Python.py")
+  INSTALL_FILES(/lib/InsightToolkit/python FILES "${PROJECT_BINARY_DIR}/_${ITK_LIBRARY}Python.so")
+ENDIF(ITK_CSWIG_PYTHON)
