*.idx, *.mdx, generated libraries, swig-scripts and lang-scripts now all install to a proper place
darcs-hash:20060116211717-733a7-3b39af7361a7d3e5e4802033e3c94634982d8d2f.gz

--- a/UseWrapITK.cmake.in
+++ b/UseWrapITK.cmake.in
@@ -33,6 +33,8 @@ FOREACH(var ITK_DIR CableSwig_DIR WRAP_ITK_TCL WRAP_ITK_PYTHON WRAP_ITK_JAVA
   MARK_AS_ADVANCED(${var})
 ENDFOREACH(var)
 
+SET(WRAPPER_INSTALL_LOCATION "@WRAP_ITK_INSTALL_LOCATION@" CACHE STRING "Path to the top of the install tree (will be appended to CMAKE_INSTALL_PREFIX).")
+
 SET(ITK_SWG_FILES "@CONFIG_SWIG_DIR@/itk.swg")
 SET(WRAP_ITK_CONFIG_DIR "@CONFIG_CONFIG_DIR@")
 SET(WRAP_ITK_CMAKE_DIR "@CONFIG_CMAKE_DIR@")
