Little readability fix for PyBuffer
darcs-hash:20060116212013-733a7-b7e85c81af15b5a90621b690903c11639e48d77d.gz

--- a/ExternalProjects/PyBuffer/CMakeLists.txt
+++ b/ExternalProjects/PyBuffer/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT(WrapITKPyBuffer)
 
-SET(WRAP_ITK_DIR "NOTFOUND" CACHE PATH "Path to build or install location of WrapITK")
+SET(WRAP_ITK_DIR "WRAP_ITK_DIR-NOTFOUND" CACHE PATH "Path to build or install location of WrapITK")
 IF(NOT WRAP_ITK_DIR)
   MESSAGE(FATAL_ERROR
           "Cannot build without WrapITK.  Please set WRAP_ITK_DIR.")
