--- a/Python/itkbase.py.in
+++ b/Python/itkbase.py.in
@@ -1,16 +1,8 @@
 """InsightToolkit support module to help load its packages."""
 import sys,os
 
-# Get the path to the directory containing this script.  It may be
-# used to set pkgdir below, depending on how this script is
-# configured.
-if __name__ == '__main__':
-    selfpath = os.path.abspath(sys.path[0] or os.curdir)
-else:
-    selfpath = os.path.abspath(os.path.dirname(__file__))
-
 # The directory containing the binary ITK python wrapper libraries.
-pkgdir = @WRAP_ITK_PACKAGE_DIR@
+pkgdir = '@WRAP_ITK_PACKAGE_DIR@'
 
 # Python "help(sys.setdlopenflags)" states:
 #
@@ -69,8 +61,8 @@ def postimport(data):
     pass
 
 # Default location for test output
-defaultTestRoot = @WRAP_ITK_TEST_ROOT@
+defaultTestRoot = '@WRAP_ITK_TEST_ROOT@'
 
 # Default location for test input
-defaultDataRoot = @WRAP_ITK_DATA_ROOT@
+defaultDataRoot = '@WRAP_ITK_DATA_ROOT@'
 
