Finish modifications for new install
darcs-hash:20060117030347-733a7-ae1ebcb45b9b45e2bb647a2a175c6d44d7ff5daf.gz

--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -1,15 +1,11 @@
-SET(ITK_JAVA_CLASSPATH ${WrapITK_BINARY_DIR}/Java)
-SET(ITK_JAVA_OUTPATH ${WrapITK_BINARY_DIR}/Java)
+SET(ITK_JAVA_CLASSPATH ${WRAP_ITK_JAVA_DIR})
+SET(ITK_JAVA_OUTPATH ${WRAP_ITK_JAVA_DIR})
 
 # Relative path from InsightToolkit.jar installation to dlls.
-IF(WIN32)
-  SET(ITK_JAVA_INSTALL_DIR "/../../bin")
-ELSE(WIN32)
-  SET(ITK_JAVA_INSTALL_DIR "")
-ENDIF(WIN32)
+SET(ITK_JAVA_INSTALL_DIR "/../Java-SWIG")
 
 IF(CMAKE_CONFIGURATION_TYPES)
-  SET(ITK_BASE_JAVA_FILE ${WrapITK_BINARY_DIR}/Java/${CMAKE_CFG_INTDIR}/InsightToolkit/itkbase.java)
+  SET(ITK_BASE_JAVA_FILE ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit/itkbase.java)
   FOREACH(config ${CMAKE_CONFIGURATION_TYPES})
     SET(ITK_JAVA_BUILD_DIR ${LIBRARY_OUTPUT_PATH}/${config})
     CONFIGURE_FILE(
@@ -22,11 +18,11 @@ IF(CMAKE_CONFIGURATION_TYPES)
     )
   ENDFOREACH(config)
   SET(ITK_JAVA_CLASSPATH
-    "${ITK_JAVA_CLASSPATH}\;${WrapITK_BINARY_DIR}/Java/${CMAKE_CFG_INTDIR}")
+    "${ITK_JAVA_CLASSPATH}\;${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}")
   SET(ITK_JAVA_OUTPATH "${ITK_JAVA_OUTPATH}/${CMAKE_CFG_INTDIR}")
 ELSE(CMAKE_CONFIGURATION_TYPES)
   SET(ITK_JAVA_BUILD_DIR ${LIBRARY_OUTPUT_PATH})
-  SET(ITK_BASE_JAVA_FILE ${WrapITK_BINARY_DIR}/Java/InsightToolkit/itkbase.java)
+  SET(ITK_BASE_JAVA_FILE ${WRAP_ITK_JAVA_DIR}/InsightToolkit/itkbase.java)
   CONFIGURE_FILE(
     ${WrapITK_SOURCE_DIR}/Java/itkbase.java.in
     ${ITK_BASE_JAVA_FILE}
@@ -35,9 +31,8 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
   FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/itk_build_tree.mark
     "File next to InsightToolkit.jar to mark the build tree.\n"
     )
-  INSTALL_FILES(/lib/InsightToolkit/java FILES
-    ${WrapITK_BINARY_DIR}/Java/InsightToolkit.jar
-    )
+  INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Java" FILES
+    ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar )
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 SET(ORDERING_DEP)
@@ -50,11 +45,11 @@ FOREACH(Kit ${ITK_KITS})
     SET(DEP_FILES ${ITK${Kit}_JAVA_DEPENDS})
   ENDIF(${Kit} MATCHES VXLNumerics)
   FOREACH(File ${DEP_FILES})
-    SET(FULL_DEP_FILES ${FULL_DEP_FILES} ${WrapITK_BINARY_DIR}/Java/InsightToolkit/${File})
+    SET(FULL_DEP_FILES ${FULL_DEP_FILES} ${WRAP_ITK_JAVA_DIR}/InsightToolkit/${File})
   ENDFOREACH(File)
 
   SET(ITK_JAVA_KIT_LIBS ${ITK_JAVA_KIT_LIBS} ${KIT_JAVA_NAME}Java)
-  SET(KIT_FILE_NAME ${WrapITK_BINARY_DIR}/Java/InsightToolkit/${KIT_JAVA_NAME}Java)
+  SET(KIT_FILE_NAME ${WRAP_ITK_JAVA_DIR}/InsightToolkit/${KIT_JAVA_NAME}Java)
   ADD_CUSTOM_COMMAND(
     OUTPUT ${KIT_FILE_NAME}.class
     DEPENDS ${KIT_FILE_NAME}.java ${FULL_DEP_FILES} ${ITK_BASE_JAVA_FILE} ${ORDERING_DEP}
@@ -68,27 +63,27 @@ ENDFOREACH(Kit)
 
 IF(CMAKE_CONFIGURATION_TYPES)
   ADD_CUSTOM_COMMAND(
-    OUTPUT ${WrapITK_BINARY_DIR}/Java/${CMAKE_CFG_INTDIR}/InsightToolkit.jar
+    OUTPUT ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar
     DEPENDS ${ITK_JAVA_KITS_FILES}
     COMMAND ${JAVA_ARCHIVE}
-    ARGS -cf ${WrapITK_BINARY_DIR}/Java/${CMAKE_CFG_INTDIR}/InsightToolkit.jar
-    -C ${WrapITK_BINARY_DIR}/Java/${CMAKE_CFG_INTDIR} InsightToolkit
+    ARGS -cf ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar
+    -C ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR} InsightToolkit
     COMMENT "Java Archive"
     )
-  ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WrapITK_BINARY_DIR}/Java/${CMAKE_CFG_INTDIR}/InsightToolkit.jar)
+  ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar)
   SET(DOLLAR "$")
-  INSTALL_FILES(/lib/InsightToolkit FILES ${WrapITK_BINARY_DIR}/Java/${DOLLAR}{BUILD_TYPE}/InsightToolkit.jar)
+  INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Java" FILES ${WRAP_ITK_JAVA_DIR}/${DOLLAR}{BUILD_TYPE}/InsightToolkit.jar)
 ELSE(CMAKE_CONFIGURATION_TYPES)
   ADD_CUSTOM_COMMAND(
-    OUTPUT ${WrapITK_BINARY_DIR}/Java/InsightToolkit.jar
+    OUTPUT ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar
     DEPENDS ${ITK_JAVA_KITS_FILES}
     COMMAND ${JAVA_ARCHIVE}
-    ARGS -cf ${WrapITK_BINARY_DIR}/Java/InsightToolkit.jar
-    -C ${WrapITK_BINARY_DIR}/Java InsightToolkit
+    ARGS -cf ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar
+    -C $${WRAP_ITK_JAVA_DIR} InsightToolkit
     COMMENT "Java Archive"
     )
-  ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WrapITK_BINARY_DIR}/Java/InsightToolkit.jar)
-  INSTALL_FILES(/lib/InsightToolkit FILES ${WrapITK_BINARY_DIR}/Java/InsightToolkit.jar)
+  ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
+  INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Java" FILES ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 ADD_DEPENDENCIES(ITKJavaJar ${ITK_JAVA_KIT_LIBS} SwigRuntimeJava)
 FOREACH(Kit ${ITK_KITS})
